# pnnp

./: .gitignore  config.example.toml  flake.nix
crates/monochrome/: Cargo.toml
crates/monochrome/src/: album.rs  artist.rs  endpoint.rs  error.rs  id.rs  lib.rs  response.rs  track.rs
crates/pnnp/: Cargo.toml
crates/pnnp/src/: config.rs  ffmpeg.rs  main.rs  pipeline.rs  track_or_album.rs
crates/pnnp/src/bot/: album.rs  cat.rs  data.rs  download.rs  interaction.rs  mod.rs  progress.rs  search.rs  single.rs
