[package]
name = "monochrome"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = "0.3.6"
base64 = "0.22.1"
bytes = "1.11.1"
chrono = { version = "0.4.43", features = ["serde"] }
const_format = "0.2.35"
futures = "0.3.32"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["json", "query", "stream"] }
roxmltree = "0.21.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["io-util"] }
tracing = "0.1.44"
url = "2.5.8"
uuid = { version = "1.21.0", features = ["serde", "v4"] }
